--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,15 +9,15 @@ body{
 
 .card{
     margin:50px auto;
-    border-radius:10px;
+    border-radius:5px;
     width:800px;
-    height: 420px;
+    height: 350px;
     background: #ebebeb!important;
 }
 
 .card>.title{
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     background: #1A237E;
 }
 
@@ -38,8 +38,9 @@ body{
 
 .card > .main > .main-left > canvas{
     margin:10px;
-    width:200px;
-    height:200px;
+    margin-left:15px;
+    /*width:200px;
+    height:200px;*/
     display: block;
 }
 
@@ -49,22 +50,25 @@ body{
     border:none;
     color:#fff;
     background: #1A237E;
+    font-size:14px;
+    font-weight: 600;
     border-radius:5px;
-    width:200px;
-    margin-left:10px;
+    width:150px;
+    margin-left:15px;
     margin-top:10px;
 }
 
 .selector{
-    width:200px;
+    width:150px;
     padding:10px;
     display:inline-block;
-    margin-left:10px;
+    margin-left:15px;
     border:none;
 }
 
 .card  button:hover{
     cursor: pointer;
+    opacity:0.95;
 }
 
 .card > .main > .main-right{
